[gd_scene load_steps=9 format=3 uid="uid://da2b73383isem"]

[ext_resource type="Script" path="res://addons/inventory-system-demos/ui/inventory_system_ui.gd" id="2_ci0ph"]
[ext_resource type="Script" path="res://addons/inventory-system/ui/grid_inventory_ui.gd" id="3_b24hb"]
[ext_resource type="PackedScene" uid="uid://dq1rob2nkb0cb" path="res://addons/inventory-system-demos/ui/slot_ui.tscn" id="4_5h6ud"]
[ext_resource type="StyleBox" uid="uid://xixm5r6l556f" path="res://addons/inventory-system-demos/grid_example/grid_field_highlighted_style_box.tres" id="4_pkug6"]
[ext_resource type="StyleBox" uid="uid://da318y6qn0f4e" path="res://addons/inventory-system-demos/grid_example/grid_item_stack_selection_style_box.tres" id="5_vwkkt"]
[ext_resource type="PackedScene" uid="uid://cci6dwxmbapt1" path="res://addons/inventory-system-demos/ui/craft/craft_station_ui.tscn" id="6_eoecr"]
[ext_resource type="Script" path="res://addons/inventory-system-demos/ui/hotbar_ui.gd" id="7_e17fd"]
[ext_resource type="PackedScene" uid="uid://doyklj58bvj21" path="res://addons/inventory-system-demos/ui/interactor/interactor_ui.tscn" id="7_vn7uk"]

[node name="Inventory System UI" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ci0ph")

[node name="InteractorUI" parent="." instance=ExtResource("7_vn7uk")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2

[node name="DropArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerGridInventoryUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 608.0
offset_top = 341.0
offset_right = 608.0
offset_bottom = 341.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_b24hb")
field_dimensions = Vector2(48, 48)
item_spacing = 2
field_highlighted_style = ExtResource("4_pkug6")
selection_style = ExtResource("5_vwkkt")

[node name="LootGridInventoryUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -429.0
offset_top = 11.0
offset_right = -46.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_b24hb")
field_dimensions = Vector2(48, 48)
item_spacing = 2
field_highlighted_style = ExtResource("4_pkug6")
selection_style = ExtResource("5_vwkkt")

[node name="PlayerCraftStationUI" parent="." instance=ExtResource("6_eoecr")]
layout_mode = 1

[node name="OtherCraftStationUI" parent="." instance=ExtResource("6_eoecr")]
layout_mode = 1

[node name="HotbarUI" type="Control" parent="." node_paths=PackedStringArray("slots_container")]
texture_filter = 1
custom_minimum_size = Vector2(234, 78)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -213.0
offset_top = -78.0
offset_right = 213.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("7_e17fd")
slot_ui_scene = ExtResource("4_5h6ud")
slots_container = NodePath("Control/UI Inventory")

[node name="Control" type="Control" parent="HotbarUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI Inventory" type="GridContainer" parent="HotbarUI/Control"]
layout_mode = 2
offset_left = 4.0
offset_top = 20.0
offset_right = 4.0
offset_bottom = 20.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="SlotClick" type="AudioStreamPlayer" parent="."]
volume_db = -12.0

[node name="SlotDrop" type="AudioStreamPlayer" parent="."]
volume_db = -12.0
